--- a/stichprobenstatistik.qmd
+++ b/stichprobenstatistik.qmd
@@ -310,17 +310,150 @@ $$
 
 ### Modus
 
-Definition 12 (Stichproben-Modus 𝑀𝑜). Der Stichprobenmodus einer Variablen 𝑋 ist derwert mit der höchsten Häufigkeit in der Stichprobe.
+::: {.callout-warning appearance="default"}
+## Definition "Modus"
 
-Bei gruppierten Daten ist die modale Klasse die Klasse mit der höchsten Häufigkeit.
+Der Modus oder Modalwert ist der in einer Verteilung am häufigsten auftretende Wert.
+:::
 
-Er kann für alle Arten von Variablen (qualitativ und quantitativ) berechnet werden.
 
-Verteilungen können mehrere Mode haben. Modusberechnung
-
-Unter Verwendung der Daten der Stichprobe zur Anzahl an Kindern in Familien ist der Wert mit der höchsten Häufigkeit 2, das bedeutet der Modus 𝑀𝑜 = 2 
-Kinder. Unter Verwendung der Daten der Stichprobe zur Höhe von Studenten ist die Klasse mit der höchsten Häufigkeit (170, 180], das bedeutet die 
-modale Klasse 𝑀𝑜 = (170, 180].
+Liegen klassierte Daten vor, entspricht der Modalwert der Klassenmitte der Klasse mit der größten Häufigkeit. Die Kategorie (Gruppe, Klasse, etc.) mit den häufigsten Werten nennt man die Modalklasse. Es ist durchaus denkbar, dass innerhalb einer Verteilung mehrere Modalwerte ermittelt werden können. Sind jedoch die Häufigkeiten der Merkmalsausprägungen annähernd gleich verteilt, macht es keinen Sinn, den Modalwert zu bestimmen. Der Modalwert, bzw. die Modalklasse lässt sich für Daten jeglichen Skalenniveaus angeben. Andererseits bietet er für nominale Merkmale die einzige Möglichkeit, etwas typisches über die Verteilung der Merkmalsausprägungen aufzuzeigen.
 
 
 ![](images/Stichprobenstatistik_modus.jpg)
+
+
+#### Modusberechnung
+
+Unter Verwendung der Daten der Stichprobe zur Anzahl an Kindern in Familien ist der Wert mit der höchsten Häufigkeit = 2.
+
+
+| $x_i$ | $h_i$ |
+|----|----|
+| 0  | 2  |
+| 1  | 6  |
+| **2** | **14** |
+| 3  | 2  |
+| 4  | 1  |
+
+Der Modus beträgt also = $2$ Kinder.
+
+
+
+Unter Verwendung der Daten der Stichprobe zur Körpergröße von Studenten ist die Klasse mit der höchsten Häufigkeit (170, 180].
+
+| X          | $h_i$  |
+|------------|-----|
+| (150,160]  | 2   |
+| (160,170]  | 8   |
+| **(170,180]** | **11** |
+| (180,190]  | 7   |
+| (190,200]  | 2   |
+
+
+Das bedeutet, die modale Klasse ist = $(170, 180]$.
+
+
+### Welchen Lagekennwert soll ich verwenden?
+
+Welche Lagekenngröße hat die größte Aussagekraft bezüglich der Stichprobe? Als Faustregel kann folgende Reihenfolge verwendet werden:
+
+1. **Mittelwert**: Der Mittelwert nutzt mehr Information aus der Stichprobe als die anderen Maße, da er die Größenordnung der 
+Daten berücksichtigt.
+2. **Median**: Der Median nutzt weniger Informationen als der Mittelwert, aber mehr als der Modus, da er die Ordnung der Daten 
+berücksichtigt.
+3. **Modus**: Der Modus ist das Maß, das am wenigsten Information aus der Stichprobe nimmt, da er nur die absolute Häufigkeit der Werte berücksichtigt.
+
+::: {.callout-important appearance="default"}
+## Achtung, Ausreisser!
+
+Der Mittelwert wird stärker von Ausreißern beeinflusst als der Median!
+:::
+
+Stellen wir uns vor, die Befragung zur Anzahl an Kinder in 7 Familien ergäbe folgende Werte
+
+> 0, 0, 1, 1, 2, 2, 15
+
+Dann wären die Lagekenngrößen
+
+- $\overline x$ = 3 Kinder
+- Median = 1 Kind
+
+In diesem Fall hat der Median die größte Aussagekraft bezüglich der Stichprobe.
+
+
+
+### nicht-zentrale Lagewerte
+
+Die nichtzentralen Lagewerte (Qua**n**tile) teilen die Stichprobenverteilung in gleich große Teile. Die am häufigsten 
+verwendeten sind:  
+
+- Qua**r**tile: Teilen die Verteilung in 4 gleich große Teile. Es gibt 3 Quartile: 
+  - $Q_1$ (25% kumuliert)
+  - $Q_2$ (50% kumuliert), 
+  - $Q_3$ (75% kumuliert).  
+
+- Dezile: Teilen die Verteilung in 10 gleich große Teile. Es gibt 9 Dezile: 
+  - $D_1$ (10% kumuliert), 
+  - $\vdots$, 
+  - $D_9$ (90% kumuliert).
+- Perzentile: Teilen die Verteilung in 100 gleich große Teile. Es gibt 99 Perzentile: 
+  - $P_1$ (1% kumuliert), 
+  - $\vdots$, 
+  - $P_{99}$ (99% kumuliert).  
+
+
+```{r}
+#| label: qunatile
+#| engine: tikz
+\definecolor{color1}{RGB}{24,81,145}
+\usetikzlibrary{snakes}
+\begin{tikzpicture}[every label/.style={text=color1}]
+\node at (5,7) {\color{color1}Quartile};
+\draw (0,6) -- (10,6);
+\draw[snake=ticks,segment length=2.5cm] (0,6) -- (10,6);
+\node at (0,5.5) {Min};
+\node at (10,5.5) {Max};
+\foreach \i in {1,...,3} {\node at (2.5*\i,5.5) {$Q_\i$};}
+\foreach \i in {1,...,4} {\node at (2.5*\i-1.25,6.5) {$25\%$};}
+\node at (5.7,5.5) {$=Me$};
+\node at (5,4) {\color{color1}Dezile};
+\draw (0,3) -- (10,3);
+\draw[snake=ticks,segment length=1cm] (0,3) -- (10,3);
+\node at (0,2.5) {Min};
+\node at (10,2.5) {Max};
+\foreach \i in {1,...,9} {\node at (\i,2.5) {$D_\i$};}
+\foreach \i in {1,...,10} {\node at (\i-.5,3.5) {$10\%$};}
+\node at (5,1) {\color{color1}Perzentile};
+\draw (0,0) -- (10,0);
+\draw[snake=ticks,segment length=0.1cm] (0,0) -- (10.1,0);
+\node at (-0.5,-0.6) {Min};
+\draw [->] (-0.3,-0.4) -- (-0.1,-0.2);
+\node at (10.5,-0.6) {Max};
+\draw [->] (10.3,-0.4) -- (10.1,-0.2);
+\node at (0.1,-0.6) {$P_1$};
+\draw [->] (0.1,-0.4) -- (0.1,-0.2);
+\node at (2.5,-0.6) {$P_{25}$};
+\draw [->] (2.5,-0.4) -- (2.5,-0.2);
+\node at (4,-0.6) {$P_{40}$};
+\draw [->] (4,-0.4) -- (4,-0.2);
+\node at (5,-0.6) {$P_{50}$};
+\draw [->] (5,-0.4) -- (5,-0.2);
+\node at (7.5,-0.6) {$P_{75}$};
+\draw [->] (7.5,-0.4) -- (7.5,-0.2);
+\node at (9.9,-0.6) {$P_{99}$};
+\draw [->] (9.9,-0.4) -- (9.9,-0.2);
+\node at (0.05,0.6) {$1\%$};
+\draw [->] (0.05,0.4) -- (0.05,0.2);
+\node at (9.95,0.6) {$1\%$};
+\draw [->] (9.95,0.4) -- (9.95,0.2);
+\end{tikzpicture}
+```
+
+
+Beachten Sie, dass es Übereinstimmungen zwischen den Quartilen, Dezilen und Perzentilen gibt es. Zum Beispiel stimmt das erste Quartil mit dem 25. Perzentil überein, und das vierte Dezil stimmt mit dem 40. Perzentil überein.  
+
+
+Berechnung der Quantile  
+Quantile werden ähnlich wie die Median berechnet. Der einzige Unterschied liegt in der kumulierenden relativen Häufigkeit, die 
+jedem Quantil zugeordnet ist. 
