--- a/stichprobenstatistik.qmd
+++ b/stichprobenstatistik.qmd
@@ -73,6 +73,7 @@ $$
 
 Die Berechnung von $\overline x$ über die Häufigkeitstabelle
 
+
 | $x_{i}$ | $h_{i}$ | $f_{i}$   | $x_{i} \cdot h_{i}$ | $x_{i} \cdot f_{i}$ |
 |----|----|------|--------|--------|
 | 0  | 2  | 0.08 | 0      | 0      |
@@ -207,15 +208,22 @@ Der Median liegt also bei 2 Kindern.
 Mithilfe der relativen Häufigkeitstabelle ist der Median der kleinste Wert mit einer kumulativen absoluten Häufigkeit $H_i$ größer oder gleich 13 bzw. einer 
 kumulativen relativen Häufigkeit $F_i$ größer oder gleich 0,5.
 
-
-| $x_i$ | $h_i$ | $f_i$  | $H_i$ | $F_i$  |
-|----|----|------|----|------|
-| 0  | 2  | 0.08 | 2  | 0.08 |
-| 1  | 6  | 0.24 | 8  | 0.32 |
-| **2**  | 14 | 0.56 | **22** | **0.88** |
-| 3  | 2  | 0.08 | 24 | 0.96 |
-| 4  | 1  | 0.04 | 25 | 1.00 |
-| $\sum$  | 25 | 1.00 |    |      |
+$$
+\definecolor{color1}{RGB}{24,81,145}
+\begin{array}{rrrrr}
+\hline
+x_i & h_i & f_i & H_i & F_i\\
+\hline
+0 & 2 & 0.08 & 2 & 0.08\\
+1 & 6 & 0.24 & 8 & 0.32\\
+\rowcolor{coral} \color{white}2 & 14 & 0.56 & 22 & 0.88\\
+3 & 2  & 0.08 & 24 & 0.96\\
+4 & 1 & 0.04 & 25 & 1 \\
+\hline
+\sum & 25 & 1 \\
+\hline
+\end{array}
+$$
 
 
 #### Gruppierte Daten
@@ -327,14 +335,20 @@ Liegen klassierte Daten vor, entspricht der Modalwert der Klassenmitte der Klass
 
 Unter Verwendung der Daten der Stichprobe zur Anzahl an Kindern in Familien ist der Wert mit der höchsten Häufigkeit = 2.
 
+$$
+\begin{array}{rr}
+\hline
+x_i & h_i \\
+\hline
+0 & 2 \\
+1 & 6 \\
+\rowcolor{coral}\color{white} 2 & 14 \\
+3 & 2  \\
+4 & 1 \\
+\hline
+\end{array}
+$$
 
-| $x_i$ | $h_i$ |
-|----|----|
-| 0  | 2  |
-| 1  | 6  |
-| **2** | **14** |
-| 3  | 2  |
-| 4  | 1  |
 
 Der Modus beträgt also = $2$ Kinder.
 
@@ -342,14 +356,19 @@ Der Modus beträgt also = $2$ Kinder.
 
 Unter Verwendung der Daten der Stichprobe zur Körpergröße von Studenten ist die Klasse mit der höchsten Häufigkeit (170, 180].
 
-| X          | $h_i$  |
-|------------|-----|
-| (150,160]  | 2   |
-| (160,170]  | 8   |
-| **(170,180]** | **11** |
-| (180,190]  | 7   |
-| (190,200]  | 2   |
-
+$$
+\begin{array}{rr}
+\hline
+X & h_i \\
+\hline
+(150,160] & 2 \\
+(160,170] & 8 \\
+\rowcolor{coral} \color{white}(170,180] & 11 \\
+(180,190] & 7 \\
+(190,200] & 2 \\
+\hline
+\end{array}
+$$
 
 Das bedeutet, die modale Klasse ist = $(170, 180]$.
 
@@ -407,11 +426,24 @@ verwendeten sind:
 #| label: qunatile
 #| engine: tikz
 \definecolor{color1}{RGB}{24,81,145}
-\usetikzlibrary{snakes}
+\usetikzlibrary{decorations.pathmorphing, decorations.pathreplacing, decorations.markings}
+\tikzset{
+  tick/.style={
+    postaction={
+      decorate,
+      decoration={
+        markings,
+        mark=between positions 0 and 1 step #1 with {
+          \draw[thin] (0,-2pt) -- (0,2pt);
+        }
+      }
+    }
+  }
+}
 \begin{tikzpicture}[every label/.style={text=color1}]
 \node at (5,7) {\color{color1}Quartile};
 \draw (0,6) -- (10,6);
-\draw[snake=ticks,segment length=2.5cm] (0,6) -- (10,6);
+\draw[tick=2.5cm] (0,6) -- (10,6);
 \node at (0,5.5) {Min};
 \node at (10,5.5) {Max};
 \foreach \i in {1,...,3} {\node at (2.5*\i,5.5) {$Q_\i$};}
@@ -419,14 +451,14 @@ verwendeten sind:
 \node at (5.7,5.5) {$=Me$};
 \node at (5,4) {\color{color1}Dezile};
 \draw (0,3) -- (10,3);
-\draw[snake=ticks,segment length=1cm] (0,3) -- (10,3);
+\draw[tick=1cm] (0,3) -- (10,3);
 \node at (0,2.5) {Min};
 \node at (10,2.5) {Max};
 \foreach \i in {1,...,9} {\node at (\i,2.5) {$D_\i$};}
 \foreach \i in {1,...,10} {\node at (\i-.5,3.5) {$10\%$};}
 \node at (5,1) {\color{color1}Perzentile};
 \draw (0,0) -- (10,0);
-\draw[snake=ticks,segment length=0.1cm] (0,0) -- (10.1,0);
+\draw[tick=0.1cm] (0,0) -- (10.1,0);
 \node at (-0.5,-0.6) {Min};
 \draw [->] (-0.3,-0.4) -- (-0.1,-0.2);
 \node at (10.5,-0.6) {Max};
@@ -462,14 +494,20 @@ Quantile werden ähnlich wie die Median berechnet. Der einzige Unterschied liegt
 
 Die Häufigkeitstabelle der Anzahl an Kindern in Familien ist
 
+$$
+\begin{array}{rr}
+\hline
+x_i & F_i \\
+\hline
+0 & 0.08\\
+1 & 0.32\\
+2 & 0.88\\
+3 & 0.96\\
+4 & 1\\
+\hline
+\end{array}
+$$
 
-| $x_i$ | $F_i$   |
-|----|------|
-| 0  | 0.08 |
-| 1  | 0.32 |
-| 2  | 0.88 |
-| 3  | 0.96 |
-| 4  | 1    |
 
 Anhand der Spalte $F_i$ kann das gewünschte Perzentil, Dezentil oder Quartil abgelesen werden.
 
@@ -506,22 +544,22 @@ axis(2, at = seq(0, 100, 10),
      las=2)
 
 # blaue Hilfslinien
-lines(c(166.66, 166.66), c(0, 25),  col="skyblue", lty=3)
-lines(c(0, 166.66),   c(25, 25), col="skyblue", lty=3)
+lines(c(166.66, 166.66), c(0, 25),  col="skyblue", lty=3, lwd=1.8)
+lines(c(0, 166.66),   c(25, 25), col="skyblue", lty=3, lwd=1.8)
 
-lines(c(171.67, 171.67), c(0, 40),  col="skyblue", lty=3)
-lines(c(0, 171.67),   c(40, 40), col="skyblue", lty=3)
-
-
-lines(c(174.44, 174.44), c(0, 50),  col="skyblue", lty=3)
-lines(c(0, 174.44),   c(50, 50), col="skyblue", lty=3)
+lines(c(171.67, 171.67), c(0, 40),  col="skyblue", lty=3, lwd=1.8)
+lines(c(0, 171.67),   c(40, 40), col="skyblue", lty=3, lwd=1.8)
 
 
-lines(c(181.85, 181.85), c(0, 75),  col="skyblue", lty=3)
-lines(c(0, 181.85),   c(75, 75), col="skyblue", lty=3)
+lines(c(174.44, 174.44), c(0, 50),  col="skyblue", lty=3, lwd=1.8)
+lines(c(0, 174.44),   c(50, 50), col="skyblue", lty=3, lwd=1.8)
 
-lines(c(186.67, 186.67), c(0, 88),  col="skyblue", lty=3)
-lines(c(0, 186.67),   c(88, 88), col="skyblue", lty=3)
+
+lines(c(181.85, 181.85), c(0, 75),  col="skyblue", lty=3, lwd=1.8)
+lines(c(0, 181.85),   c(75, 75), col="skyblue", lty=3, lwd=1.8)
+
+lines(c(186.67, 186.67), c(0, 88),  col="skyblue", lty=3, lwd=1.8)
+lines(c(0, 186.67),   c(88, 88), col="skyblue", lty=3, lwd=1.8)
 
 axis(1, 
      at = c(149, 166.66, 171.67, 174.44, 181.85, 186.67, 200),
@@ -536,3 +574,214 @@ axis(1,
      )
 )
 ```
+
+
+
+
+
+
+
+## Streuungskenngrößen
+
+Häufigkeitsverteilungen lassen sich nicht nur durch ihre Lage auf der
+Messwertskala, sonder auch durch ihre Streuung beschreiben.
+
+Streuungskenngrößen sind Maßzahlen zur Bewertung oder Quantifizierung der
+Variablilität der Messwerte. Es gibt diverse Streuungskenngrößen. Die wichtigsten sind:
+
+- Spannweite $R$
+- Quartilsabstand $Q$
+- Varianz $s^2$
+- Standardabweichung $s$
+- Variationskoeffizient $vk$
+
+
+### Spannweite
+
+Ein besonders einfaches Streuungsmaß ist die Spannweite (auch: Variationsbreite), die mit “$R$” (englisch “range”) abgekürzt wird. 
+
+
+::: {.callout-warning appearance="default"}
+## Definition "Spannweite"
+Die Spannweite $R$ bestimmt sich aus der Differenz zwischen dem größten und dem kleinsten Messwert.
+
+$$
+R = \max_{x_i} -\min_{x_i}
+$$
+:::
+
+
+
+```{r}
+#| engine: tikz
+#| label: range
+\usetikzlibrary{decorations.pathmorphing, decorations.pathreplacing, decorations.markings}
+\tikzset{
+  tick/.style={
+    postaction={
+      decorate,
+      decoration={
+        markings,
+        mark=between positions 0 and 1 step #1 with {
+          \draw[thin] (0,-2pt) -- (0,2pt);
+        }
+      }
+    }
+  }
+}
+\begin{tikzpicture}[every label/.style={text=color1}]
+\draw (0,1) -- (10,1);
+\draw[tick=10cm] (0,1) -- (10.1,1);
+\node at (0,0.5) {Min};
+\node at (10,0.5) {Max};
+\draw [decorate,decoration={brace,amplitude=10pt},yshift=4pt] (0,1.2) -- (10,1.2) node
+[black,midway,yshift=0.6cm] {Spannweite};
+\end{tikzpicture}
+```
+
+
+
+
+### Interquartilsabstand
+
+::: {.callout-warning appearance="default"}
+## Definition "Interquartilsabstand"
+
+Der Interquartilsabstand einer Variablen $x$ ist der Unterschied zwischen dem dritten und dem ersten Stichproben-Quartil. 
+
+$$
+IQR = Q_3-Q_1 
+$$
+
+:::
+
+Der IQR gibt die mittleren 50% der Verteilung an. Daher reagiert er  - ähnlich wie der Median - robuster auf  Ausreisser.
+
+
+```{r}
+#| label: IQR
+#| engine: tikz
+\usetikzlibrary{decorations.pathmorphing, decorations.pathreplacing, decorations.markings}
+\tikzset{
+  tick/.style={
+    postaction={
+      decorate,
+      decoration={
+        markings,
+        mark=between positions 0 and 1 step #1 with {
+          \draw[thin] (0,-2pt) -- (0,2pt);
+        }
+      }
+    }
+  }
+}
+\begin{tikzpicture}[every label/.style={text=color1}]
+\draw (0,1) -- (10,1);
+\draw[tick=2.5cm] (0,1) -- (10,1);
+\node at (0,0.5) {Min};
+\node at (10,0.5) {Max};
+\foreach \i in {1,...,3} {\node at (2.5*\i,0.5) {$Q_\i$};}
+\foreach \i in {1,...,4} {\node at (2.5*\i-1.25,1.2) {$25\%$};}
+\draw [decorate,decoration={brace,amplitude=10pt},yshift=4pt] (2.5,1.2) -- (7.5,1.2) node
+[black,midway,yshift=0.6cm] {IQR};
+\end{tikzpicture}
+```
+
+
+###  Boxplot  
+Die Streuung einer Variablen in einer Stichprobe kann graphisch mit einem **Boxplot** dargestellt werden. An ihm lassen sich die fünf wichtigsten Kennwerte (Minimum, Quartile und Maximum) 
+ablesen. 
+
+Es besteht aus einem Block (Box), der vom ersten bis zum dritten Quartil gezeichnet wird. Dies entspricht dem Interquartilsabstand. 
+
+Zusätzlich werden an den Rändern zwei Segmenten, die als untere und obere Antennen (Whisker) bezeichnet werden. Normalerweise wird die Box durch den Median in zwei Teile gesplittet.   
+
+Das Boxplot erfreut sich großer Beliebtheit, da es mehrere Funktionen erfüllt:
+
+- Es dient zur Einschätzung der Streuung, da es die Spannweite sowie den Interquartilabstand darstellt.  
+- Es dient zum Erkennen von Ausreißern, die außerhalb der Whiskers liegen.  
+- Es dient zur Bestimmung der Symmetrie der Verteilung, indem die Länge der Boxen und Whisker über und unter dem Median verglichen werden.
+
+
+```{r}
+#| label: boxplots1
+data <- read.table("data/newborn_weights.csv", 
+                   header=TRUE, 
+                   sep=" ", 
+                   na.strings="NA", 
+                   dec=".", 
+                   strip.white=TRUE)
+par(cex.lab=1.2)
+boxplot(data$weight, 
+        horizontal=TRUE, 
+        col="skyblue", 
+        pch=16, 
+        main="Boxplot der Geburtsgewichte", 
+        xlab="Gewicht (Kg)")
+text(2.9,0.75,expression(italic(Q[1])))
+text(3.1,0.75,expression(italic(Q[2])))
+text(3.4,0.75,expression(italic(Q[3])))
+text(1.95,0.95,"Min")
+text(4.5,0.95,"Max")
+text(2.05,1.06,"Ausreisser",col="red")
+text(4.4,1.06,"Ausreisser",col="red")
+
+
+```
+
+Um einen Boxplot zu erstellen, folgen Sie den nachfolgenden Schritten:
+
+1. Berechnen Sie die Quartile.
+2. Zeichnen Sie eine Box vom ersten zum dritten Quartil.
+3. Teilen Sie die Box mit dem Median
+4. Die Whiskers berechnen sich über die Hilfsgrößen $f_1$ und $f_2$ wie folgt:
+$$
+\begin{aligned}
+f_1&=Q_1-1.5\,\text{IQR}\\
+f_2&=Q_3+1.5\,\text{IQR}
+\end{aligned}
+$$
+   Diese Grenzen definieren den Bereich, in dem die Daten als normal betrachtet werden. Jeder Wert außerhalb dieses Bereichs wird als Ausreisser betrachtet. Zeichnen Sie für den unteren Whisker einen Strich vom unteren Quartil zum kleinsten Wert in der Stichprobe, der größer oder gleich $f_1$ ist, und für den oberen Whisker einen Strich vom oberen Quartil zum größten Wert in der Stichprobe, der kleiner oder gleich $f_2$ ist.
+5. Zeichnen Sie schließlich je einen Punkt für alle Werte kleiner $f_1$ oder größer $f_2$ (Ausreisser).
+
+
+### Abweichungen zur Mitte
+
+Bei der *Abweichungen zur Mitte* wird die Entfernung von jedem Wert in der Stichprobe zum Mittelwert gemessen.
+
+
+```{r}
+#| label: deviation
+#| engine: tikz
+\usetikzlibrary{decorations.pathmorphing, decorations.pathreplacing}
+\begin{tikzpicture}[every label/.style={text=color1}]
+\draw (0,1) -- (5,1);
+\draw (2.5,0.9) -- (2.5,1.1);
+\node at (2.5,0.5) {$\bar x$};
+\draw (0.5,0.9) -- (0.5,1.1);
+\node at (0.5,0.5) {$x_i$}; 
+\draw (4,0.9) -- (4,1.1);
+\node at (4,0.5) {$x_j$};  
+\draw [decorate,decoration={brace,amplitude=10pt},yshift=4pt] (0.5,1.2) -- (2.5,1.2) node
+[black,midway,yshift=0.6cm] {$x_i-\bar x$};
+\draw [decorate,decoration={brace,amplitude=10pt},yshift=4pt] (2.5,1.2) -- (4,1.2) node
+[black,midway,yshift=0.6cm] {$x_j-\bar x$};
+\node at (1.5,2.5) {\tiny Abweichung -};
+\node at (3.25,2.5) {\tiny Abweichung +};
+\end{tikzpicture}
+```
+
+Wenn die Abweichungen groß sind, ist der Mittelwert weniger repräsentativ als bei kleinen Abweichungen.
+
+
+::: {.callout-warning appearance="default"}
+## Definition "Summe der quadrierten Abweichungen"
+
+Üblicherweise wird an dieser Stelle die **Summe der quadrierten Abweichungen** (*SQA*) bestimmt, indem die Abweichungen quadriert und aufsummiert werden.
+
+$$
+SQA = \sum (x_i - \overline x)^2
+$$
+:::
+
+
